--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "subscibe and listen to podcasts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "keywords": [
     "podcast"
   ],
   "author": "neumaics@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "electron": "^1.4.0",
+    "gulp": "^3.9.1"
+  }
 }
