--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "electron-prebuilt": "^1.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0"
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.1.0"
   }
 }
