--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   "dependencies": {
     "axios": "^0.14.0",
     "electron": "^1.4.0",
+    "immutable": "^3.8.1",
+    "lodash": "^4.16.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "uuid": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
