--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "subscibe and listen to podcasts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-register --recursive",
+    "test:watch": "npm test -- --watch",
     "start": "gulp run"
   },
   "keywords": [
@@ -21,6 +22,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "uuid": "^2.0.3"
   },
   "devDependencies": {
@@ -29,11 +31,16 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.12.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
     "electron-prebuilt": "^1.4.0",
+    "expect": "^1.20.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
-    "gulp-less": "^3.1.0"
+    "gulp-less": "^3.1.0",
+    "mocha": "^3.0.2",
+    "nock": "^8.0.0",
+    "redux-mock-store": "^1.2.1"
   }
 }
