--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "subscibe and listen to podcasts",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --recursive",
+    "test": "electron-mocha --compilers js:babel-register --recursive",
     "test:watch": "npm test -- --watch",
     "start": "gulp run"
   },
@@ -23,7 +23,8 @@
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "uuid": "^2.0.3"
+    "uuid": "^2.0.3",
+    "xml2json": "^0.10.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
@@ -32,7 +33,9 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
+    "electron-mocha": "^3.1.1",
     "electron-prebuilt": "^1.4.0",
+    "electron-rebuild": "^1.2.1",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
