--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "axios": "^0.14.0",
     "electron": "^1.4.0",
     "immutable": "^3.8.1",
+    "jsonfile": "^2.4.0",
     "lodash": "^4.16.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "uuid": "^2.0.3",
