--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-sound": "^0.5.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "uuid": "^2.0.3",
