--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "immutable": "^3.8.1",
     "jsonfile": "^2.4.0",
     "lodash": "^4.16.1",
+    "lokijs": "^1.4.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
@@ -40,6 +41,8 @@
     "electron-mocha": "^3.1.1",
     "electron-prebuilt": "^1.4.0",
     "electron-rebuild": "^1.2.1",
+    "eslint": "^3.8.1",
+    "eslint-plugin-react": "^6.4.1",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
