--- a/package.json
+++ b/package.json
@@ -11,19 +11,37 @@
   "keywords": [
     "podcast"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neumaics/podcast-player.git"
+  },
   "author": "neumaics@gmail.com",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.14.0",
-    "electron": "^1.4.0",
-    "font-awesome": "^4.6.3",
+    "babel-core": "^6.21.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "electron": "^1.4.12",
+    "electron-mocha": "^3.3.0",
+    "electron-prebuilt": "^1.4.12",
+    "electron-rebuild": "^1.4.0",
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0",
+    "font-awesome": "^4.7.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^3.3.0",
     "immutable": "^3.8.1",
     "jsonfile": "^2.4.0",
-    "lodash": "^4.16.1",
+    "lodash": "^4.17.2",
     "lokijs": "^1.4.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
+    "mocha": "^3.2.0",
+    "nock": "^8.2.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
     "react-router": "^2.8.1",
     "react-sound": "^0.5.2",
     "redux": "^3.6.0",
