--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonfile": "^2.4.0",
     "lodash": "^4.17.3",
     "md5": "^2.2.1",
+    "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
