styling upgrade, injecting config to player, begin component testing.

--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,9 @@
 {
   "itunes": {
     "searchEndpoint": "http://itunes.apple.com/search"
+  },
+  "player": {
+    "skipForwardDuration": 10000,
+    "skipBackwardDuration": 10000
   }
 }
