--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "electron-mocha": "^3.1.1",
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.2.1",
+    "enzyme": "^2.7.0",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
@@ -56,6 +57,7 @@
     "gulp-less": "^3.3.0",
     "mocha": "^3.2.0",
     "nock": "^8.2.1",
+    "react-addons-test-utils": "^15.4.1",
     "redux-mock-store": "^1.2.1"
   }
 }
