--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "react-router": "^2.8.1",
     "react-sound": "^0.5.2",
     "redux": "^3.6.0",
+    "redux-storage": "^4.1.2",
+    "redux-storage-decorator-filter": "^1.1.8",
+    "redux-storage-engine-localstorage": "^1.1.4",
     "redux-thunk": "^2.1.0",
     "uuid": "^2.0.3",
     "xml2json": "^0.10.0"
