--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.14.0",
+    "bootstrap": "^4.0.0-alpha.5",
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
     "jsonfile": "^2.4.0",
@@ -36,7 +37,7 @@
     "redux-storage-engine-localstorage": "^1.1.4",
     "redux-thunk": "^2.1.0",
     "uuid": "^2.0.3",
-    "xml2json": "^0.10.0"
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
