--- a/app/config.json
+++ b/app/config.json
@@ -4,6 +4,7 @@
   },
   "player": {
     "skipForwardDuration": 10000,
-    "skipBackwardDuration": 10000
-  }
+    "skipBackwardDuration": "10000"
+  },
+  "isLoaded": true
 }
