--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mocha": "^3.2.0",
     "nock": "^8.2.1",
     "react-addons-test-utils": "^15.4.1",
-    "redux-mock-store": "^1.2.1"
+    "redux-mock-store": "^1.2.1",
+    "sinon": "^1.17.7"
   }
 }
