--- a/package.json
+++ b/package.json
@@ -19,40 +19,41 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.14.0",
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
     "jsonfile": "^2.4.0",
-    "lodash": "^4.17.3",
+    "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-router": "^2.8.1",
     "react-sound": "^0.5.2",
     "redux": "^3.6.0",
     "redux-storage": "^4.1.2",
     "redux-storage-decorator-filter": "^1.1.8",
     "redux-storage-engine-localstorage": "^1.1.4",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.2.0",
     "uuid": "^2.0.3",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.24.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "electron": "^1.4.13",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.24.0",
+    "electron": "^1.6.3",
     "electron-mocha": "^3.1.1",
     "electron-prebuilt": "^1.4.13",
-    "electron-rebuild": "^1.2.1",
-    "enzyme": "^2.7.0",
-    "eslint": "^3.12.2",
-    "eslint-plugin-react": "^6.8.0",
+    "electron-rebuild": "^1.5.7",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.18.0",
+    "eslint-plugin-react": "^6.10.0",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -62,7 +63,7 @@
     "mocha": "^3.2.0",
     "nock": "^8.2.1",
     "react-addons-test-utils": "^15.4.1",
-    "redux-mock-store": "^1.2.1",
+    "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.7"
   }
 }
